src/main/java/com/karolbystrek/chubbycompiler/ChubbyParser.java
// Generated from C:/Users/chame/Desktop/sem4/kompilatory/OwnProgrammingLanguage/src/main/antlr4/com/karolbystrek/chubbycompiler/Chubby.g4 by ANTLR 4.13.2
package com.karolbystrek.chubbycompiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ChubbyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, ENDCLASS=2, FUNCTION=3, ENDFUNCTION=4, CONSTRUCTOR=5, ENDCONSTRUCTOR=6, 
		IF=7, THEN=8, ELSIF=9, ELSE=10, ENDIF=11, FOR=12, ENDFOR=13, WHILE=14, 
		ENDWHILE=15, CONTINUE=16, BREAK=17, TRY=18, CATCH=19, FINALLY=20, ENDTRY=21, 
		THROW=22, RETURN=23, EXTENDS=24, IMPLEMENTS=25, PUBLIC=26, PRIVATE=27, 
		PROTECTED=28, CONST=29, STATIC=30, OVERRIDE=31, IMPORT=32, NEW=33, THIS=34, 
		VOID=35, NULL=36, BYTE=37, BOOL=38, INT=39, FLOAT=40, DOUBLE=41, CHAR=42, 
		STRING=43, LONG=44, FLOAT_LITERAL=45, DOUBLE_LITERAL=46, INTEGER_LITERAL=47, 
		CHAR_LITERAL=48, STRING_LITERAL=49, BOOL_LITERAL=50, IDENTIFIER=51, PLUS=52, 
		MINUS=53, MULTIPLY=54, DIVIDE=55, MODULO=56, ASSIGN=57, PLUS_ASSIGN=58, 
		MINUS_ASSIGN=59, MULTIPLY_ASSIGN=60, DIVIDE_ASSIGN=61, MODULO_ASSIGN=62, 
		EQUAL=63, NOT_EQUAL=64, LESS=65, GREATER=66, LESS_EQUAL=67, GREATER_EQUAL=68, 
		AND=69, OR=70, NOT=71, LEFT_PAREN=72, RIGHT_PAREN=73, LEFT_SQUARE=74, 
		RIGHT_SQUARE=75, COMMA=76, SEMICOLON=77, DOT=78, COLON=79, LINE_COMMENT=80, 
		WS=81;
	public static final int
		RULE_program = 0, RULE_import_statement = 1, RULE_qualified_identifier = 2, 
		RULE_class_definition = 3, RULE_class_body = 4, RULE_class_member = 5, 
		RULE_constructor_definition = 6, RULE_constructor_body = 7, RULE_variable_definition = 8, 
		RULE_function_definition = 9, RULE_visibility_modifier = 10, RULE_parameter_list = 11, 
		RULE_parameter = 12, RULE_type_specifier = 13, RULE_return_type = 14, 
		RULE_function_body = 15, RULE_statement = 16, RULE_block_statement = 17, 
		RULE_simple_statement = 18, RULE_local_variable_declaration = 19, RULE_assignment_statement = 20, 
		RULE_lvalue = 21, RULE_assignment_operator = 22, RULE_return_statement = 23, 
		RULE_break_statement = 24, RULE_continue_statement = 25, RULE_throw_statement = 26, 
		RULE_try_catch_statement = 27, RULE_if_statement = 28, RULE_for_statement = 29, 
		RULE_for_init = 30, RULE_for_update = 31, RULE_while_statement = 32, RULE_expression = 33, 
		RULE_logicalOrExpression = 34, RULE_logicalAndExpression = 35, RULE_equalityExpression = 36, 
		RULE_relationalExpression = 37, RULE_additiveExpression = 38, RULE_multiplicativeExpression = 39, 
		RULE_unaryExpression = 40, RULE_postfixExpression = 41, RULE_primaryExpression = 42, 
		RULE_argument_list = 43, RULE_object_creation = 44, RULE_literal = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "import_statement", "qualified_identifier", "class_definition", 
			"class_body", "class_member", "constructor_definition", "constructor_body", 
			"variable_definition", "function_definition", "visibility_modifier", 
			"parameter_list", "parameter", "type_specifier", "return_type", "function_body", 
			"statement", "block_statement", "simple_statement", "local_variable_declaration", 
			"assignment_statement", "lvalue", "assignment_operator", "return_statement", 
			"break_statement", "continue_statement", "throw_statement", "try_catch_statement", 
			"if_statement", "for_statement", "for_init", "for_update", "while_statement", 
			"expression", "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "postfixExpression", "primaryExpression", "argument_list", 
			"object_creation", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'endclass'", "'function'", "'endfunction'", "'constructor'", 
			"'endconstructor'", "'if'", "'then'", "'elsif'", "'else'", "'endif'", 
			"'for'", "'endfor'", "'while'", "'endwhile'", "'continue'", "'break'", 
			"'try'", "'catch'", "'finally'", "'endtry'", "'throw'", "'return'", "'extends'", 
			"'implements'", "'public'", "'private'", "'protected'", "'const'", "'static'", 
			"'override'", "'import'", "'new'", "'this'", "'void'", "'null'", "'byte'", 
			"'bool'", "'int'", "'float'", "'double'", "'char'", "'string'", "'long'", 
			null, null, null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", "'!='", 
			"'<'", "'>'", "'<='", "'>='", "'and'", "'or'", "'not'", "'('", "')'", 
			"'['", "']'", "','", "';'", "'.'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "ENDCLASS", "FUNCTION", "ENDFUNCTION", "CONSTRUCTOR", 
			"ENDCONSTRUCTOR", "IF", "THEN", "ELSIF", "ELSE", "ENDIF", "FOR", "ENDFOR", 
			"WHILE", "ENDWHILE", "CONTINUE", "BREAK", "TRY", "CATCH", "FINALLY", 
			"ENDTRY", "THROW", "RETURN", "EXTENDS", "IMPLEMENTS", "PUBLIC", "PRIVATE", 
			"PROTECTED", "CONST", "STATIC", "OVERRIDE", "IMPORT", "NEW", "THIS", 
			"VOID", "NULL", "BYTE", "BOOL", "INT", "FLOAT", "DOUBLE", "CHAR", "STRING", 
			"LONG", "FLOAT_LITERAL", "DOUBLE_LITERAL", "INTEGER_LITERAL", "CHAR_LITERAL", 
			"STRING_LITERAL", "BOOL_LITERAL", "IDENTIFIER", "PLUS", "MINUS", "MULTIPLY", 
			"DIVIDE", "MODULO", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULTIPLY_ASSIGN", 
			"DIVIDE_ASSIGN", "MODULO_ASSIGN", "EQUAL", "NOT_EQUAL", "LESS", "GREATER", 
			"LESS_EQUAL", "GREATER_EQUAL", "AND", "OR", "NOT", "LEFT_PAREN", "RIGHT_PAREN", 
			"LEFT_SQUARE", "RIGHT_SQUARE", "COMMA", "SEMICOLON", "DOT", "COLON", 
			"LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Chubby.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ChubbyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ChubbyParser.EOF, 0); }
		public List<Import_statementContext> import_statement() {
			return getRuleContexts(Import_statementContext.class);
		}
		public Import_statementContext import_statement(int i) {
			return getRuleContext(Import_statementContext.class,i);
		}
		public List<Class_definitionContext> class_definition() {
			return getRuleContexts(Class_definitionContext.class);
		}
		public Class_definitionContext class_definition(int i) {
			return getRuleContext(Class_definitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChubbyVisitor ) return ((ChubbyVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(92);
				import_statement();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(98);
				class_definition();
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			setState(103);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_statementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ChubbyParser.IMPORT, 0); }
		public Qualified_identifierContext qualified_identifier() {
			return getRuleContext(Qualified_identifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ChubbyParser.SEMICOLON, 0); }
		public Import_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).enterImport_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).exitImport_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChubbyVisitor ) return ((ChubbyVisitor<? extends T>)visitor).visitImport_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_statementContext import_statement() throws RecognitionException {
		Import_statementContext _localctx = new Import_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(IMPORT);
			setState(106);
			qualified_identifier();
			setState(107);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Qualified_identifierContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ChubbyParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ChubbyParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(ChubbyParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(ChubbyParser.DOT, i);
		}
		public Qualified_identifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualified_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).enterQualified_identifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).exitQualified_identifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChubbyVisitor ) return ((ChubbyVisitor<? extends T>)visitor).visitQualified_identifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Qualified_identifierContext qualified_identifier() throws RecognitionException {
		Qualified_identifierContext _localctx = new Qualified_identifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_qualified_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(IDENTIFIER);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(110);
				match(DOT);
				setState(111);
				match(IDENTIFIER);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_definitionContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(ChubbyParser.CLASS, 0); }
		public Visibility_modifierContext visibility_modifier() {
			return getRuleContext(Visibility_modifierContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ChubbyParser.IDENTIFIER, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode ENDCLASS() { return getToken(ChubbyParser.ENDCLASS, 0); }
		public TerminalNode EXTENDS() { return getToken(ChubbyParser.EXTENDS, 0); }
		public List<Qualified_identifierContext> qualified_identifier() {
			return getRuleContexts(Qualified_identifierContext.class);
		}
		public Qualified_identifierContext qualified_identifier(int i) {
			return getRuleContext(Qualified_identifierContext.class,i);
		}
		public TerminalNode IMPLEMENTS() { return getToken(ChubbyParser.IMPLEMENTS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ChubbyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ChubbyParser.COMMA, i);
		}
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).enterClass_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).exitClass_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChubbyVisitor ) return ((ChubbyVisitor<? extends T>)visitor).visitClass_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(CLASS);
			setState(118);
			visibility_modifier();
			setState(119);
			match(IDENTIFIER);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(120);
				match(EXTENDS);
				setState(121);
				qualified_identifier();
				}
			}

			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(124);
				match(IMPLEMENTS);
				setState(125);
				qualified_identifier();
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(126);
					match(COMMA);
					setState(127);
					qualified_identifier();
					}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(135);
			class_body();
			setState(136);
			match(ENDCLASS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_bodyContext extends ParserRuleContext {
		public List<Class_memberContext> class_member() {
			return getRuleContexts(Class_memberContext.class);
		}
		public Class_memberContext class_member(int i) {
			return getRuleContext(Class_memberContext.class,i);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).exitClass_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChubbyVisitor ) return ((ChubbyVisitor<? extends T>)visitor).visitClass_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 469762088L) != 0)) {
				{
				{
				setState(138);
				class_member();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_memberContext extends ParserRuleContext {
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Constructor_definitionContext constructor_definition() {
			return getRuleContext(Constructor_definitionContext.class,0);
		}
		public Variable_definitionContext variable_definition() {
			return getRuleContext(Variable_definitionContext.class,0);
		}
		public Class_memberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_member; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).enterClass_member(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).exitClass_member(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChubbyVisitor ) return ((ChubbyVisitor<? extends T>)visitor).visitClass_member(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_memberContext class_member() throws RecognitionException {
		Class_memberContext _localctx = new Class_memberContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_class_member);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				function_definition();
				}
				break;
			case CONSTRUCTOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				constructor_definition();
				}
				break;
			case PUBLIC:
			case PRIVATE:
			case PROTECTED:
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				variable_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Constructor_definitionContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTOR() { return getToken(ChubbyParser.CONSTRUCTOR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ChubbyParser.IDENTIFIER, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(ChubbyParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(ChubbyParser.RIGHT_PAREN, 0); }
		public Constructor_bodyContext constructor_body() {
			return getRuleContext(Constructor_bodyContext.class,0);
		}
		public TerminalNode ENDCONSTRUCTOR() { return getToken(ChubbyParser.ENDCONSTRUCTOR, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Constructor_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).enterConstructor_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChubbyListener ) ((ChubbyListener)listener).exitConstructor_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChubbyVisitor ) return ((ChubbyVisitor<? extends T>)visitor).visitConstructor_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constructor_definitionContext constructor_definition() throws RecognitionException {
		Constructor_definitionContext _localctx = new Constructor_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constructor_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(CONSTRUCTOR);
			setState(150);
			match(IDENTIFIER);
			setState(151);
			match(LEFT_PAREN);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2286846746820608L) != 0)) {
				{
				setState(152);
				parameter_list();
				}
			}

			setState(155);
			match(RIGHT_PAREN);
			setState(156);
			constructor_body();
			setState(157);
			match(ENDCONSTRUCTOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
